--- a/.github/workflows/acceptance.yml
+++ b/.github/workflows/acceptance.yml
@@ -2,6 +2,8 @@ name: Acceptance Tests
 
 on:
   push:
+    branches:
+      - 2022
     paths:
       - ".github/workflows/acceptance.yml"
       - "backend/**"
